# YaTrackerBot

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  __main__.py
app/core/: base_client.py
app/core/handlers/: health.py
app/telegram/: setup.py  storage.py
app/telegram/handlers/: __init__.py  handle_issue.py
app/telegram/middlewares/: tracker.py
app/tracker/: client.py  helpers.py  settings.py  setup.py
examples/: example.env
